syntax = "proto3";

package ru.meetup.grpc.dto;

import "google/protobuf/wrappers.proto";

message AccountId {
    google.protobuf.StringValue value = 1;
}